<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:clickable="false">

    <!--italian navbar-->
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="#222"
        >
        <RadioButton
            android:id="@+id/btnMenu"
            style="@style/navbar_button"
            android:text="@string/fa_cutlery"
            android:layout_height="fill_parent"
            />
        <RadioButton
            android:id="@+id/btnFeed"
            style="@style/navbar_button"
            android:text="@string/fa_comments"
            android:layout_marginLeft="5dp"
            android:layout_height="fill_parent"
            />
        <RadioButton
            android:id="@+id/btnProfile"
            style="@style/navbar_button"
            android:text="@string/fa_user"
            android:layout_marginLeft="5dp"
            android:layout_height="fill_parent"
            />
    </RadioGroup>
    <!--end italian navbar-->

</RelativeLayout>
