<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" android:padding="20dp">
    <ImageView
        android:src="@drawable/header_logo"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="5dp"
        android:scaleType="center"
        android:background="#FFFFFF"
        android:contentDescription="@string/app_name" />
    <!--Login-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/loginView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">
        <EditText
            android:id="@+id/loginUsername"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/login_un_hint" />
        <EditText
            android:id="@+id/loginPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/login_pw_hint"/>
        <Button
            android:id="@+id/loginBtn"
            android:text="Login"
            android:onClick="onLoginClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/signupBtn"
            android:text="Register"
            android:onClick="onSignupClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!--TODO: forgot PW button here, maybe 100% width, below login/signup-->
    </LinearLayout>
    <!--End Login-->
    <!--Registration-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/registerView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <EditText
            android:id="@+id/registerUsername"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/register_un_hint" />
        <EditText
            android:id="@+id/registerPassword1"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/register_pw1_hint"/>
        <EditText
            android:id="@+id/registerPassword2"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/register_pw2_hint"/>
        <AutoCompleteTextView
            android:id="@+id/registerOrg"
            android:inputType="textAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/register_un_hint" />
        <Button
            android:id="@+id/registerBtn"
            android:text="Register"
            android:onClick="onRegisterClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/cancelRegisterButton"
            android:text="Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <!--End Registration-->
    <!--Forgot PW-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/forgotView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <EditText
            android:id="@+id/forgotEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/register_un_hint" />
        <Button
            android:id="@+id/forgotBtn"
            android:text="Send Password"
            android:onClick="onForgotClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/cancelForgotButton"
            android:text="Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <!--End Forgot PW-->
</LinearLayout>